Primaire doel zodat je de paginas kan aflezen en kleur omgeving toegepast.
Detailpagina gemaakt
Overzichtpagina gemaakt
Database gemaakt

Webapplicatie maakt nu connectie met database
Webapplicatie pas data toe
Models voor SportEvent gemaakt
Redirect naar de overzichtpagina bij opstarten
Standaard navigatie aangepast

--- a/Pr1Lj2St1Fontys_webapp/appsettings.json
+++ b/Pr1Lj2St1Fontys_webapp/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=SCHOOLLAPTOPRH;Database=SportEventsDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+
+    },
+
+    "AllowedHosts": "*"
+
 }
